# hw2-1

./: CMakeLists.txt  common.h  job-openmp  job-serial  main.cpp  openmp.cpp  openmp.h  serial.cpp  serial.h
